Fixed .full-bleed-article-section bug

--- a/styles/sass/_main-home.scss
+++ b/styles/sass/_main-home.scss
@@ -81,7 +81,7 @@
   margin-bottom: 100px;
 }
 
-@media (min-width: 1200px) {
+@media (min-width: 1260px) {
   .img-article-section {
     display: flex;
     justify-content: space-between;
@@ -96,7 +96,7 @@
   }
 }
 
-@media (min-width: 1200px) {
+@media (min-width: 1260px) {
   .img-article-one {
     display: flex;
     flex-direction: column;
@@ -121,16 +121,17 @@
   box-shadow: 25px 25px 0px 0px $accent-color;
 }
 
-@media (min-width: 1200px) {
+@media (min-width: 1260px) {
   .img-article-one img {
     // padding-top + box-shadow's vertical axis
     margin-top: -125px; 
-    max-width: 550px;
+    max-width: 590px;
+    width: 100%;
   }
   .img-article-two img {
     // box-shadow's vertical axis
     margin: 50px 0 -100px;
-    max-width: 550px;
+    max-width: 590px;
   }
 }
   
@@ -142,7 +143,7 @@
   padding: 0 2.5%;
 }
 
-@media (min-width: 1200px) {
+@media (min-width: 1260px) {
   .img-article-one article {
     text-align: right;
     max-width: 475px;
@@ -157,7 +158,7 @@
   }
 }
 
-@media (min-width: 1200px) {
+@media (min-width: 1260px) {
   .img-article-two {
     flex-direction: column-reverse;
   }
